--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,13 @@
 {% extends 'blog_base.html' %}
 
-
 {% block title %} Home {% endblock %}
 
 {% block body %}
 
 <div class="container">
     <h1>Home Page - Welcome</h1>
-<h3>Complete demo </h3>
-
-<p>
-Demo of Flask WTF Registration Form.
-
-</p>
-
-
-
-
+    <h3>Complete demo </h3>
+    <p>Demo of Flask WTF Registration Form.</p>
 </div>
 
 {% endblock %}
