--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">megaBITES</a>
+      <a class="navbar-brand" href="/">megaBITES</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -75,7 +75,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Ellie Stanton 2021</p>
+          <p class="copyright text-muted">Copyright &copy; megaBITES 2021</p>
         </div>
       </div>
     </div>
