--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>megaBITES</h1>
-            <span class="subheading">the coding chefs</span>
+            <span class="subheading">the coders who cook</span>
           </div>
         </div>
       </div>
