--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,6 @@
 {% extends 'blog_base.html' %}
 
-{% block title %} {{post.blog_title}} {% endblock %}
+{% block title %} Recipes {% endblock %}
 
 {% block body %}
 
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>megaBITES</h1>
+            <h1>Recipes</h1>
             <span class="subheading">the coders who cook</span>
           </div>
         </div>
@@ -19,11 +19,6 @@
     </div>
   </header>
 
-
-
   <!-- Main Content -->
-<div class="container">
-    <p>{{post.content}}</p>
-  </div>
 
 {% endblock %}
