--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -40,9 +40,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
-<!--          <li class="nav-item">-->
-<!--            <a class="nav-link" href="/">Home</a>-->
-<!--          </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="/recipes">Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact Us</a>
+          </li>
         </ul>
       </div>
     </div>
