--- a/templates/home.html
+++ b/templates/home.html
@@ -44,4 +44,24 @@
     </div>
   </div>
 
+<footer>
+    <div>
+        <h3 style="text-align:center">The megaBITES Newsletter</h3>
+        <br>
+        <h4 style="text-align:center">Mouthwatering recipes and cooking hacks right to your inbox!</h4>
+    </div>
+
+  <form class="form-inline">
+  <div class="form-group mb-2">
+    <label for="optiontosubscribe" class="sr-only">Email</label>
+   <input type="text" readonly class="form-control-plaintext" id="optiontosubscribe" value="Love the Coders who Cook?">
+  </div>
+  <div class="form-group mx-sm-3 mb-2">
+    <label for="inputEmail" class="sr-only">Email</label>
+    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+  </div>
+  <button type="submit" class="btn btn-primary mb-2">Subscribe!</button>
+</form>
+</footer>
+
 {% endblock %}
