--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -77,6 +77,22 @@
                 </span>
               </a>
             </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/stantsagram/">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/ellie.stanton.376">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
           </ul>
           <p class="copyright text-muted">Copyright &copy; megaBITES 2021</p>
         </div>
