--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,10 +1,12 @@
-{% block title %} Home {% endblock %}
+{% extends 'blog_base.html' %}
+
+{% block title %} Registration {% endblock %}
 
 {% block body %}
 
 <div class="container">
     <h1>Registration Page - Welcome</h1>
-<h3>WTF </h3>
+<h3>Please register to login</h3>
 
     <br>
     <br>
@@ -37,16 +39,16 @@
     <h1>Please Register</h1>
 
     <form action="" method="post" novalidate>
-      {{form.csrf_token}}
+      {{forms.csrf_token}}
 
       <p>
 
-          {{form.username.label}}
-          {{form.username(size=32)}}
+          {{forms.username.label}}
+          {{forms.username(size=32)}}
 
 
 
-          {% for error in form.username.errors %}
+          {% for error in forms.username.errors %}
           <span style="color:red;">
 
               {{error}}
@@ -58,11 +60,11 @@
 
          <p>
 
-          {{form.password.label}}
-          {{form.password(size=32)}}
+          {{forms.password.label}}
+          {{forms.password(size=32)}}
 
 
-            {% for error in form.password.errors %}
+            {% for error in forms.password.errors %}
           <span style="color:red;">
 
               {{error}}
