--- a/templates/login.html
+++ b/templates/login.html
@@ -1,105 +1,90 @@
-{% extends 'blog_base.html' %}
+<!--{% extends 'blog_base.html' %}-->
 
-{% block title %} Login {% endblock %}
+<!--{% block title %} Login {% endblock %}-->
 
-{% block body %}
+<!--{% block body %}-->
 
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/well-foods-microbiome-jumbo.jpeg') }}')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="site-heading">
-            <h1>Login</h1>
-            <span class="subheading">the coders who cook</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
+<!--<div class="container">-->
+<!--    <h1>Login Page - Welcome</h1>-->
+<!--<h3>Please login using your credentials</h3>-->
 
-<div class="container">
-    <h1>Login Page - Welcome</h1>
-<h3>Please login using your credentials</h3>
+<!--    <br>-->
+<!--    <br>-->
+<!--    <hr>-->
 
-    <br>
-    <br>
-    <hr>
+<!--    {% with messages = get_flashed_messages() %}-->
 
-    {% with messages = get_flashed_messages() %}
+<!--    {% if messages %}-->
 
-    {% if messages %}
+<!--    {% for message in messages %}-->
 
-    {% for message in messages %}
+<!--       <div class="alert alert-success alert-dismissable" role="alert">-->
+<!--        <button type="button" class="close" data-dismiss="alert" aria-label="close">-->
+<!--            <span aria-hidden="true">X</span>-->
+<!--        </button>-->
 
-       <div class="alert alert-success alert-dismissable" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="close">
-            <span aria-hidden="true">X</span>
-        </button>
+<!--             {{message}}-->
 
-             {{message}}
-
-    </div>
+<!--    </div>-->
 
 
 
 
-    {% endfor  %}
+<!--    {% endfor  %}-->
 
-    {% endif %}
+<!--    {% endif %}-->
 
-    {% endwith %}
+<!--    {% endwith %}-->
 
-    <h1>Please Login</h1>
+<!--    <h1>Please Login</h1>-->
 
-    <form action="" method="post" novalidate>
-      {{form.csrf_token}}
+<!--    <form action="" method="post" novalidate>-->
+<!--      {{form.csrf_token}}-->
 
-      <p>
+<!--      <p>-->
 
-          {{forms.username.label}}
-          {{forms.username(size=32)}}
-
-
-
-          {% for error in forms.username.errors %}
-          <span style="color:red;">
-
-              {{error}}
-          </span>
-          {% endfor %}
-
-      </p>
-
-
-         <p>
-
-          {{forms.password.label}}
-          {{forms.password(size=32)}}
-
-
-            {% for error in forms.password.errors %}
-          <span style="color:red;">
-
-              {{error}}
-          </span>
-          {% endfor %}
-
-      </p>
-
-
-        <p>
-            <input type="submit" value="Login" class="btn btn-success">
-
-        </p>
+<!--          {{forms.username.label}}-->
+<!--          {{forms.username(size=32)}}-->
 
 
 
-    </form>
+<!--          {% for error in forms.username.errors %}-->
+<!--          <span style="color:red;">-->
+
+<!--              {{error}}-->
+<!--          </span>-->
+<!--          {% endfor %}-->
+
+<!--      </p>-->
+
+
+<!--         <p>-->
+
+<!--          {{forms.password.label}}-->
+<!--          {{forms.password(size=32)}}-->
+
+
+<!--            {% for error in forms.password.errors %}-->
+<!--          <span style="color:red;">-->
+
+<!--              {{error}}-->
+<!--          </span>-->
+<!--          {% endfor %}-->
+
+<!--      </p>-->
+
+
+<!--        <p>-->
+<!--            <input type="submit" value="Login" class="btn btn-success">-->
+
+<!--        </p>-->
 
 
 
-</div>
+<!--    </form>-->
 
-{% endblock %}
+
+
+<!--</div>-->
+
+<!--{% endblock %}-->
