--- a/templates/home.html
+++ b/templates/home.html
@@ -49,21 +49,48 @@
     <div class="row justify-content-center">
         <h3>The megaBITES Newsletter</h3>
     </div>
+
     <div class="row justify-content-center">
         <h4>Mouthwatering recipes and cooking hacks right to your inbox!</h4>
     </div>
+
     <div class="row justify-content-center">
         <h4>Love the Coders who Cook?</h4>
     </div>
-    <div class="row justify-content-center">
-        <form class="form-inline" action="{{ url_for('subscribe') }}" method="post">
-            <div class="form-group mx-sm-3 mb-2">
-                <label for="email" class="sr-only">Email</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-            </div>
-            <button type="submit" value="Subscribe" class="btn btn-primary mb-2">Subscribe!</button>
-        </form>
+
+    <form class="form-inline" action="{{ url_for('subscribe') }}" method="post">
+        <div class="form-group mx-sm-3 mb-2">
+        <label for="email" class="sr-only">Email</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
     </div>
+        <div class="form-group mx-sm-3 mb-2">
+            <button type="submit" value="Subscribe" class="btn btn-primary mb-2">Subscribe!</button>
+    </div>
+    </form>
+
+
+    <div class="row justify-content-center">
+        <h3>Already a megaBITES member?</h3>
+    </div>
+        <div class="container">
+
+    {% if 'mBuID' in request.cookies %}
+    <form action="/logout" method="post">
+        <input class="btn btn-primary mb-2" type="submit" value="Logout">
+      </form>
+    {% else %}
+      <br>
+      <form action="/login" method="post">
+        <input type="text" placeholder="Username" name="username">
+         <input type="password" placeholder="Password" name="password">
+        <input class="btn btn-primary mb-2" type="submit" value="Login!">
+      </form>
+      {% if error %}
+        <p class="error"><strong>Error:</strong> {{ error }}
+      {% endif %}
+    {% endif %}
+    </div>
+
 </footer>
 
 {% endblock %}
