--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -45,6 +45,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/recipes">Recipes</a>
                 </li>
