--- a/templates/home.html
+++ b/templates/home.html
@@ -37,6 +37,9 @@
                     <h2 class="post-title">
                         {{post.blog_title}}
                     </h2>
+                    <h6 class="post-subtitle">
+                        {{post.blog_subtitle}}
+                    </h6>
                 </a>
                 <p class="post-meta">Posted by
                     <a href="#">{{post.blog_author}}</a>
