--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -65,7 +65,7 @@
                   <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Login
                   </button>
-                  <form class="dropdown-menu p-4 w-25" action="login" method="post">
+                  <form class="dropdown-menu p-4 w-25" action="/login" method="post">
                     <div class="form-group">
                       <label for="email">Email address</label>
                       <input name="email" type="email" class="form-control" id="email" placeholder="email@example.com" value="elliestanton@ymail.com">
